# AI-Site-Reliability-Engineering-Agent

./: Dockerfile  README.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt
agent/: actions.py  agent.py  decision_engine.py  log_parser.py
api/: main.py
env/: grader.py  reward.py  schemas.py  sre_env.py  state.py  tasks.py
frontend/: index.html  script.js  styles.css
scenarios/: bad_commit.py  cascading_failure.py  zombie_process.py
server/: app.py
services/services_a/: Dockerfile  app.py
services/services_b/: Dockerfile  app.py
services/services_c/: Dockerfile  app.py
